fix: harden CodBoot system command handling and sync docs
Agent-Logs-Url: https://github.com/DanexCodr/Coderive/sessions/01171da2-fe0e-4dff-9935-0933d27d14c7

Co-authored-by: DanexCodr <216312766+DanexCodr@users.noreply.github.com>